# hacker-typer

./: CMakeLists.txt  Cargo.toml  HackerTyper.sln  README.md  config.h.in  hackertyper.cpp
.github/workflows/: build_cmake.yml  build_cmake_windows.yml  main.yml
HackerTyper/: HackerTyper.cpp  HackerTyper.vcxproj  HackerTyper.vcxproj.filters  Text.txt
src/: CMakeLists.txt  config.h.in  main.cpp  main.h  main.rs
